--- a/gb/23/1/9/n13903134.md
+++ b/gb/23/1/9/n13903134.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2022年 555名参与迫害法轮功者厄运缠身</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859676-AFP-600x370.jpg" />
 <h6>档案照，2022年中共政法委、公检法司官员频遭厄运。(AFP)
 </h6>
 <hr>
-	<p>【大纪元2023年01月09日讯】（大纪元记者李洁思综合报导）2022年，据明慧网资料的不完全统计，至少555名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%82%E4%B8%8E%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">参与迫害法轮功</a>的中共人员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>。</p>
+	<p>【大纪元2023年01月09日讯】（大纪元记者李洁思综合报导）2022年，据明慧网资料的不完全统计，至少555名参与迫害法轮功的中共人员遭厄运。</p>
 <p>其中公安系统人员最多，达193人，其次党政官员144人，检察院、法院、司法人员104人。公检法司和政法委、610是中共具体实施迫害法轮功的主要部门。</p>
-<p>除了西藏外，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>者来自30个省、直辖市、自治区，其中辽宁省人数最多，有71人，其次黑龙江48人、河北42人。</p>
+<p>除了西藏外，遭厄运者来自30个省、直辖市、自治区，其中辽宁省人数最多，有71人，其次黑龙江48人、河北42人。</p>
 <p>从遭厄运的方式来看，这一年因贪腐而被查处的有409人，占总数的73%；其次，死亡人数达99人，占17.8%；再次，重病29人，占5%。</p>
-<p>2022年是非同寻常的一年，中共迫害法轮功持续23年，迫害依然严重，公检法司、政法委系统不法人员仍然积极参与其中。在这一年，迫害法轮功的元凶江泽民死亡，中国大陆疫情海啸般爆发，吞噬众多生命，包括大量<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%91%98.md#1">中共官员</a>，其中不乏<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%82%E4%B8%8E%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">参与迫害法轮功</a>者，并仍在肆虐。</p>
+<p>2022年是非同寻常的一年，中共迫害法轮功持续23年，迫害依然严重，公检法司、政法委系统不法人员仍然积极参与其中。在这一年，迫害法轮功的元凶江泽民死亡，中国大陆疫情海啸般爆发，吞噬众多生命，包括大量中共官员，其中不乏参与迫害法轮功者，并仍在肆虐。</p>
 <p>以下列举公检法司等系统部分典型案例：</p>
 <h2><b>前海南省政法委秘书长刘诚被立案调查</b></h2>
-<figure id="attachment_13903249" aria-describedby="caption-attachment-13903249" style="width: 90px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903249-2022-11-18-ebao-zhengfawei_02.jpg"><img class=" wp-image-13903249" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903249-2022-11-18-ebao-zhengfawei_02.jpg" alt="" width="90" b="97" /></a><figcaption id="caption-attachment-13903249" class="wp-caption-text">刘诚</figcaption></figure>
+<figure id="attachment_13903249" aria-describedby="caption-attachment-13903249" style="width: 90px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903249-2022-11-18-ebao-zhengfawei_02.jpg"><img decoding="async" class=" wp-image-13903249" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903249-2022-11-18-ebao-zhengfawei_02.jpg" alt="" width="90" b="97" /></a><figcaption id="caption-attachment-13903249" class="wp-caption-text">刘诚</figcaption></figure>
 <p><strong>刘诚</strong>，1961年9月出生，安徽省界首市人，曾长期在海南省政法系统任职。</p>
 <p>2022年5月消息，海南省委政法委原副书记、秘书长刘诚因涉嫌严重“违纪违法”被立案调查。</p>
 <p>刘诚曾任三亚市中级法院院长、市委政法委副书记，海南省高级法院副院长、审判委员会委员；2018年4月至2021年10月，任海南省委政法委员会副书记、秘书长；2021年10月退休。</p>
 <p>在其任职期间，法轮功学员遭受迫害部分案例：2015年，琼海市法轮功学员邓贤程被非法判刑6年，关押在海南省三江监狱。</p>
 <p>2021年4月26日，琼海市法轮功学员符咏春离家前往三亚，当天被三亚车站派出所相关人员非法拘捕。</p>
-<h2><b>前江西省南昌市政法委书记郭安<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%90%BD%E9%A9%AC.md#1">落马</a>被查</b></h2>
-<figure id="attachment_13903251" aria-describedby="caption-attachment-13903251" style="width: 85px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903251-2022-11-18-ebao-zhengfawei_06.jpg"><img class=" wp-image-13903251" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903251-2022-11-18-ebao-zhengfawei_06.jpg" alt="" width="85" b="108" /></a><figcaption id="caption-attachment-13903251" class="wp-caption-text">郭安</figcaption></figure>
+<h2><b>前江西省南昌市政法委书记郭安落马被查</b></h2>
+<figure id="attachment_13903251" aria-describedby="caption-attachment-13903251" style="width: 85px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903251-2022-11-18-ebao-zhengfawei_06.jpg"><img decoding="async" class=" wp-image-13903251" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903251-2022-11-18-ebao-zhengfawei_06.jpg" alt="" width="85" b="108" /></a><figcaption id="caption-attachment-13903251" class="wp-caption-text">郭安</figcaption></figure>
 <p>据2022年9月16日消息，前江西省南昌市政法委书记、现江西省人大教育科学文化卫生委员会主任委员郭安因涉嫌严重“违纪违法”被调查。</p>
 <p><strong>郭安</strong>，1962年10月出生，江西省信丰县人。2011年8月至2018年3月，历任江西省南昌市委副书记、政法委书记，市委副书记、市长；2018年3月至2021年2月任鹰潭市委书记。</p>
 <p>郭安任南昌市政法委书记期间，南昌地区遭受绑架关押迫害的法轮功学员共有36位。</p>
@@ -33,25 +33,25 @@
 <p><strong>李佳</strong>，内蒙古自治区前政法委书记，被查。</p>
 <p><strong>齐海田</strong>，云南省前政法委副书记，退休近七年后被查。</p>
 <h2>安徽公安厅前常务副厅长陈小平退休八年获刑</h2>
-<figure id="attachment_13903310" aria-describedby="caption-attachment-13903310" style="width: 93px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903310-e4887ca7a2f41814cc1f0f387ab10a2c.jpg"><img class=" wp-image-13903310" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903310-e4887ca7a2f41814cc1f0f387ab10a2c.jpg" alt="" width="93" b="133" /></a><figcaption id="caption-attachment-13903310" class="wp-caption-text">陈小平</figcaption></figure>
+<figure id="attachment_13903310" aria-describedby="caption-attachment-13903310" style="width: 93px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903310-e4887ca7a2f41814cc1f0f387ab10a2c.jpg"><img decoding="async" class=" wp-image-13903310" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903310-e4887ca7a2f41814cc1f0f387ab10a2c.jpg" alt="" width="93" b="133" /></a><figcaption id="caption-attachment-13903310" class="wp-caption-text">陈小平</figcaption></figure>
 <p><strong>陈小平</strong>，安徽省公安厅前常务副厅长，涉嫌严重“违纪违法”2020年6月被查；2022年获刑11年半。</p>
 <p>陈小平，1953年1月出生，山东胶南人，历任安徽省公安厅八处、四处副科长、科长，安徽省公安厅四处副处长、处长等，2002年2月任安徽省公安厅副厅长，7年后任安徽省公安厅党委副书记、常务副厅长（正厅级）。陈小平于2013年3月退休，至今近9年。</p>
 <p>2002年5月31日晚，安徽八位法轮功学员在有线电视网插播揭露法轮功被迫害真相的视频。孙方熙原是安徽电视台的工程师，因插播真相被非法判刑13年，在宿州监狱遭受迫害。</p>
 <p>合肥法轮功学员朱明、刘莉、左其香、刘和芳，于2009年4月18日去贵池区发放法轮功真相资料，被国保大队警察非法拘禁在池州市看守所，后均被非法冤判，刑期从5年至8年不等。</p>
 <h2>黑龙江省前公安厅厅长王大伟被查</h2>
-<figure id="attachment_13903315" aria-describedby="caption-attachment-13903315" style="width: 84px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903315-ff58a63b4658ea052cfea8c422ae670d.jpg"><img class=" wp-image-13903315" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903315-ff58a63b4658ea052cfea8c422ae670d.jpg" alt="" width="84" b="106" /></a><figcaption id="caption-attachment-13903315" class="wp-caption-text">王大伟</figcaption></figure>
+<figure id="attachment_13903315" aria-describedby="caption-attachment-13903315" style="width: 84px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903315-ff58a63b4658ea052cfea8c422ae670d.jpg"><img decoding="async" class=" wp-image-13903315" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903315-ff58a63b4658ea052cfea8c422ae670d.jpg" alt="" width="84" b="106" /></a><figcaption id="caption-attachment-13903315" class="wp-caption-text">王大伟</figcaption></figure>
 <p>据2022年3月1日消息，辽宁省副省长、省公安厅前厅长王大伟涉嫌严重“违纪违法”被查。</p>
 <p><strong>王大伟</strong>，1964年4月出生，黑龙江省望奎县人，2013年3月，接替薛恒出任辽宁省公安厅党委书记、厅长；2017年2月升任辽宁省副省长，省公安厅党委书记、厅长。此前2003年，他曾任黑龙江省哈尔滨市副市长；2007年1月，任哈尔滨中共市委常委、政法委书记；2009年8月，任黑龙江省公安厅党委副书记、副厅长。</p>
 <p>王大伟任辽宁省公安厅厅长期间，177名法轮功学员被迫害致死，在全国的省份中居首位。</p>
 <p>辽宁鞍山市法轮功学员、优秀教师孙敏，因为坚持信仰“真、善、忍”，遭到绑架、洗脑、劳教、判刑等迫害。2016年6月再次被绑架，遭冤判7年，于2018年3月8日，在辽宁省女子监狱被迫害致死，年仅50岁。</p>
 <p>2021年获知，辽宁法轮功学员被迫害离世25人，被非法判刑至少141人。</p>
-<p>更多公安系统高官<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%90%BD%E9%A9%AC.md#1">落马</a>：</p>
+<p>更多公安系统高官落马：</p>
 <p><strong>王永生</strong>，江苏省公安厅二级巡视员、前连云港公安局局长，被判刑12年。</p>
 <p><strong>何广平</strong>，广东省公安厅前副厅长，退休6年后被查。</p>
 <p><strong>张明</strong>，陕西省公安厅前二级巡视员，被审查。</p>
 <p><strong>龚道安</strong>，上海市副市长、市公安局局长，被判无期徒刑。</p>
 <h2>前贵州省检察院副检察长肖振猛获刑10年</h2>
-<figure id="attachment_13903316" aria-describedby="caption-attachment-13903316" style="width: 88px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903316-0fa6ad422a71f1ba4178d90c377d3534.jpg"><img class=" wp-image-13903316" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903316-0fa6ad422a71f1ba4178d90c377d3534.jpg" alt="" width="88" b="113" /></a><figcaption id="caption-attachment-13903316" class="wp-caption-text">肖振猛</figcaption></figure>
+<figure id="attachment_13903316" aria-describedby="caption-attachment-13903316" style="width: 88px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13903316-0fa6ad422a71f1ba4178d90c377d3534.jpg"><img decoding="async" class=" wp-image-13903316" src="https://i.epochtimes.com/assets/uploads/2023/01/id13903316-0fa6ad422a71f1ba4178d90c377d3534.jpg" alt="" width="88" b="113" /></a><figcaption id="caption-attachment-13903316" class="wp-caption-text">肖振猛</figcaption></figure>
 <p>据贵州省消息，2022年7月8日，前贵州省检察院副检察长肖振猛被贵州省黔东南州中级法院一审公开宣判犯受贿罪，判处有期徒刑10年，并处罚金人民币一百万元。</p>
 <p><strong>肖振猛</strong>，1963年7月出生，贵州遵义人，在贵州省检察院工作34年，历任书记员、检察员、处长、办公室副主任、反贪污贿赂局局长。2008年10月，任贵州省检察院副检察长、检察委员会委员；2019年3月至2021年8月，任贵州师范学院副院长、党委委员。</p>
 <p>肖振猛是贵州省检察院系统迫害法轮功的主要责任人，因参与迫害法轮功在明慧网被曝光。</p>
@@ -70,7 +70,7 @@
 <p><strong>周全富</strong>，贵州省司法厅前副厅长，涉嫌严重“违纪违法”被查。</p>
 <p><strong>刘秀珍</strong>，陕西省司法厅前党组成员、省监狱管理局前党委书记，被查。</p>
 <p><strong>艾尼瓦尔?斯依提</strong>，新疆司法厅厅长，被查。</p>
-<h2>大疫下 <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%91%98.md#1">中共官员</a>、专家名人密集死亡</h2>
+<h2>大疫下 中共官员、专家名人密集死亡</h2>
 <p>2022年12月初，自中共全面放开“清零”后，疫情雪崩般袭卷全中国，大量中共官员、学者、教授、医生、专业人士等死亡。这些多是为中共唱赞歌或做出“贡献”的人，其中不乏迫害法轮功者。</p>
 <h3>前《人民日报》记者杨良化去世</h3>
 <p>据大纪元记者报导，12月15日，中共党员、前《人民日报》记者杨良化去世。起先财新网报导他因感染新冠去世，后来该报导被下架，疑遭中共官方的压力。</p>
@@ -83,45 +83,36 @@
 <p>资料来源：明慧网、大纪元</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/3/n13135724.md#1">湖北政法系统十余人遭厄运 都迫害过法轮功</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/8/n13148027.md#1">内蒙赤峰市七十余人遭厄运 曾迫害法轮功</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/25/n13187247.md#1">迫害法轮功 前辽宁监狱局长姚喜双遭厄运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/14/n13504657.md#1">参与迫害法轮功 2021年553人被曝遭厄运</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/3/n13135724.md#1">湖北政法系统十余人遭厄运 都迫害过法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/8/n13148027.md#1">内蒙赤峰市七十余人遭厄运 曾迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/25/n13187247.md#1">迫害法轮功 前辽宁监狱局长姚喜双遭厄运</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/14/n13504657.md#1">参与迫害法轮功 2021年553人被曝遭厄运</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/24/n9988943.md#1" target="_blank">共产党毁灭人类暴政录——前言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/2/n10185925.md#1" target="_blank">名为开放实为开抢的邓小平理论 (下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954436.md#1">天公微意妙难量 许大年诚心改过福绵绵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952483.md#1">【古道人生】捕风捉影无事生非而造成三人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962135.md#1">【财商天下】中国汽车抢占俄市场 俄罗斯人很无奈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961276.md#1">【时事军事】大反攻面前 普京内心怂了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961578.md#1">【晚间新闻】多国惊现大角星变异株 传播飞快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961152.md#1">专家：习近平正为战争做准备 世界应认真对待</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960989.md#1">微信和QQ凌晨崩了 网民：该崩溃的是我</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960977.md#1">辽宁男驾车到无人陵园 雷达显示全是“人”影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960536.md#1">刘涛持股公司注销 直播账号停更 网友热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960514.md#1">夺全球专辑销量冠军 周杰伦回应昆凌骄傲又逗趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960795.md#1">中国漫画家因冒犯政府被捕  历劫后用画笔发声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959381.md#1">有一种运动可能对健康有害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954466.md#1">这种糖吃多让人变痴呆 专家析原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960218.md#1">衣服应该多久洗一次？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961000.md#1">无法边走路边讲话？哈佛研究：或为痴呆症前兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949783.md#1">“太闲”竟然也会导致自律神经失调？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345153.md#1">【百年真相】最得宋庆龄信任 此人为何寻短见？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344939.md#1">若有1000美元闲钱 八项明智的理财生财之道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/9/n13903134.htm">2022年 555名参与迫害法轮功者厄运缠身</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903134.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/9/n13903134.htm">2022年 555名参与迫害法轮功者厄运缠身</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/9/n13903134.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
